[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Marker/MapControl.gd" type="Script" id=1]
[ext_resource path="res://UI/Marker/ToggleablePlacemark.gd" type="Script" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends Button

signal subgroup_selected()

func select_placemark():
	emit_signal(\"subgroup_selected\")
"

[sub_resource type="Theme" id=2]

[node name="ToggleablePlacemark" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -26, -49 )
mouse_filter = 1
script = ExtResource( 2 )

[node name="MapControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="ToggleButton" type="Button" parent="MapControl"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 1
flat = true
icon_align = 1
script = SubResource( 1 )

[node name="Control" type="Control" parent="MapControl"]
visible = false
margin_right = 12.0
margin_bottom = 12.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="PanelContainer" parent="MapControl/Control"]
self_modulate = Color( 0.472656, 0.472656, 0.472656, 1 )
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="CloseButton" type="Button" parent="MapControl/Control"]
modulate = Color( 0.640625, 0.427917, 0.427917, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -19.0
margin_top = -20.0
margin_right = 5.0
margin_bottom = 4.0
mouse_filter = 1
size_flags_horizontal = 9
size_flags_vertical = 9
text = "X"

[connection signal="mouse_entered" from="MapControl/ToggleButton" to="." method="_on_ToggleButton_mouse_entered"]
[connection signal="mouse_exited" from="MapControl/ToggleButton" to="." method="_on_ToggleButton_mouse_exited"]
[connection signal="pressed" from="MapControl/ToggleButton" to="." method="_on_ToggleButton_pressed"]
[connection signal="subgroup_selected" from="MapControl/ToggleButton" to="." method="_on_ToggleButton_subgroup_selected"]
[connection signal="gui_input" from="MapControl/Control" to="." method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="MapControl/Control" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="MapControl/Control" to="." method="_on_Control_mouse_exited"]
[connection signal="pressed" from="MapControl/Control/CloseButton" to="." method="_on_CloseButton_pressed"]
